[gd_scene load_steps=5 format=3 uid="uid://civct4l3mu043"]

[ext_resource type="Script" path="res://NodeCube/node_cube.gd" id="1_5imm6"]
[ext_resource type="PackedScene" uid="uid://cax3s66k3k1lv" path="res://NodeCube/corner_piece.tscn" id="2_3uipg"]
[ext_resource type="PackedScene" uid="uid://btove7oyvfxcl" path="res://NodeCube/cube_pivot.tscn" id="4_sshtf"]
[ext_resource type="PackedScene" uid="uid://vrei23mqxksq" path="res://NodeCube/edge_piece.tscn" id="4_tss10"]

[node name="NodeCube" type="Node3D"]
script = ExtResource("1_5imm6")

[node name="WhitePivot" parent="." instance=ExtResource("4_sshtf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 0.333, 2.08165e-12)

[node name="CornerCJM" parent="WhitePivot" instance=ExtResource("2_3uipg")]
transform = Transform3D(-1, 3.48787e-16, 8.74228e-08, 3.48787e-16, 1, -3.48787e-16, -8.74228e-08, -3.48787e-16, -1, -0.333, 0, -0.333)
corner_id = 2

[node name="CornerDIF" parent="WhitePivot" instance=ExtResource("2_3uipg")]
transform = Transform3D(-4.37114e-08, 3.48787e-16, 1, 3.48787e-16, 1, -3.48787e-16, -1, 3.48787e-16, -4.37114e-08, 0.333, 0, -0.333)
corner_id = 3

[node name="CornerAER" parent="WhitePivot" instance=ExtResource("2_3uipg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.333, 0, 0.333)

[node name="CornerBNQ" parent="WhitePivot" instance=ExtResource("2_3uipg")]
transform = Transform3D(-4.37114e-08, -3.48787e-16, -1, 3.48787e-16, 1, -3.48787e-16, 1, -3.48787e-16, -4.37114e-08, -0.333, 0, 0.333)
corner_id = 1

[node name="EdgeAQ" parent="WhitePivot" instance=ExtResource("4_tss10")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 0.333)

[node name="EdgeBM" parent="WhitePivot" instance=ExtResource("4_tss10")]
transform = Transform3D(-4.37114e-08, -3.48787e-16, -1, 3.48787e-16, 1, -3.48787e-16, 1, -3.48787e-16, -4.37114e-08, -0.333, 2.08165e-12, 2.08165e-12)
edge_id = 1

[node name="EdgeDE" parent="WhitePivot" instance=ExtResource("4_tss10")]
transform = Transform3D(-4.37114e-08, 3.48787e-16, 1, 3.48787e-16, 1, -3.48787e-16, -1, 3.48787e-16, -4.37114e-08, 0.333, 2.08165e-12, 2.08165e-12)
edge_id = 3

[node name="EdgeCI" parent="WhitePivot" instance=ExtResource("4_tss10")]
transform = Transform3D(-1, 3.48787e-16, -8.74228e-08, 3.48787e-16, 1, -3.48787e-16, 8.74228e-08, -3.48787e-16, -1, 2.08165e-12, 2.08165e-12, -0.333)
edge_id = 2

[node name="BluePivot" parent="." instance=ExtResource("4_sshtf")]
transform = Transform3D(1, 3.48787e-16, 3.48787e-16, 3.48787e-16, -4.37114e-08, -1, -3.48787e-16, 1, -4.37114e-08, 2.08165e-12, 2.08165e-12, 0.333)
rotation_order = 5
face_color = 3

[node name="EdgeHR" parent="BluePivot" instance=ExtResource("4_tss10")]
transform = Transform3D(-4.37114e-08, 3.48787e-16, 1, 3.48787e-16, 1, -3.48787e-16, -1, 3.48787e-16, -4.37114e-08, 0.333, 2.08165e-12, 2.08165e-12)
edge_id = 6

[node name="EdgeNT" parent="BluePivot" instance=ExtResource("4_tss10")]
transform = Transform3D(-4.37114e-08, -3.48787e-16, -1, 3.48787e-16, 1, -3.48787e-16, 1, -3.48787e-16, -4.37114e-08, -0.333, 2.08165e-12, 2.08165e-12)
edge_id = 9

[node name="OrangePivot" parent="." instance=ExtResource("4_sshtf")]
transform = Transform3D(-4.37114e-08, 1, 3.48787e-16, -1, -4.37114e-08, -3.48787e-16, -3.48787e-16, -3.48787e-16, 1, 0.333, 2.08165e-12, 2.08165e-12)
face_color = 4

[node name="RedPivot" parent="." instance=ExtResource("4_sshtf")]
transform = Transform3D(-4.37114e-08, -1, 3.48787e-16, 1, -4.37114e-08, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, -0.333, 2.08165e-12, 2.08165e-12)
face_color = 2

[node name="GreenPivot" parent="." instance=ExtResource("4_sshtf")]
transform = Transform3D(-1, 1.50996e-07, -6.60024e-15, 0, -4.37114e-08, -1, -1.50996e-07, -1, 4.37114e-08, 2.08165e-12, 2.08165e-12, -0.333)
rotation_order = 5
face_color = 1

[node name="EdgeJP" parent="GreenPivot" instance=ExtResource("4_tss10")]
transform = Transform3D(-4.37114e-08, 3.48787e-16, 1, 3.48787e-16, 1, -3.48787e-16, -1, 3.48787e-16, -4.37114e-08, 0.333, 2.08165e-12, 2.08165e-12)
edge_id = 7

[node name="EdgeFL" parent="GreenPivot" instance=ExtResource("4_tss10")]
transform = Transform3D(-4.37114e-08, -3.48787e-16, -1, 3.48787e-16, 1, -3.48787e-16, 1, -3.48787e-16, -4.37114e-08, -0.333, 2.08165e-12, 2.08165e-12)
edge_id = 4

[node name="YellowPivot" parent="." instance=ExtResource("4_sshtf")]
transform = Transform3D(1, -3.48787e-16, -3.48787e-16, -3.48787e-16, -1, 8.74228e-08, -3.48787e-16, -8.74228e-08, -1, 2.08165e-12, -0.333, 2.08165e-12)
face_color = 5

[node name="CornerOTW" parent="YellowPivot" instance=ExtResource("2_3uipg")]
transform = Transform3D(-1, 3.48787e-16, -8.74228e-08, 3.48787e-16, 1, 0, 8.74228e-08, 0, -1, -0.333, 2.08165e-12, -0.333)
corner_id = 7

[node name="CornerHSX" parent="YellowPivot" instance=ExtResource("2_3uipg")]
transform = Transform3D(-4.37114e-08, 3.48787e-16, 1, 0, 1, -3.48787e-16, -1, 0, -4.37114e-08, 0.333, 2.08165e-12, -0.333)
corner_id = 5

[node name="CornerGLU" parent="YellowPivot" instance=ExtResource("2_3uipg")]
transform = Transform3D(1, 4.02214e-24, 0, 4.02214e-24, 1, 0, 0, 0, 1, 0.333, 2.08165e-12, 0.333)
corner_id = 4

[node name="CornerKPV" parent="YellowPivot" instance=ExtResource("2_3uipg")]
transform = Transform3D(-4.37114e-08, -3.48787e-16, -1, 0, 1, -3.48787e-16, 1, 0, -4.37114e-08, -0.333, 2.08165e-12, 0.333)
corner_id = 6

[node name="EdgeKU" parent="YellowPivot" instance=ExtResource("4_tss10")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 0.333)
edge_id = 8

[node name="EdgeOV" parent="YellowPivot" instance=ExtResource("4_tss10")]
transform = Transform3D(-4.37114e-08, -3.48787e-16, -1, 3.48787e-16, 1, -3.48787e-16, 1, -3.48787e-16, -4.37114e-08, -0.333, 2.08165e-12, 2.08165e-12)
edge_id = 10

[node name="EdgeGX" parent="YellowPivot" instance=ExtResource("4_tss10")]
transform = Transform3D(-4.37114e-08, 3.48787e-16, 1, 3.48787e-16, 1, -3.48787e-16, -1, 3.48787e-16, -4.37114e-08, 0.333, 2.08165e-12, 2.08165e-12)
edge_id = 5

[node name="EdgeSW" parent="YellowPivot" instance=ExtResource("4_tss10")]
transform = Transform3D(-1, 3.48787e-16, -8.74228e-08, 3.48787e-16, 1, -3.48787e-16, 8.74228e-08, -3.48787e-16, -1, 2.08165e-12, 2.08165e-12, -0.333)
edge_id = 11

[node name="CameraRotationPoint" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CameraRotationPoint"]
transform = Transform3D(-0.866025, -0.17101, -0.469846, 3.27752e-16, 0.939693, -0.34202, 0.5, -0.296198, -0.813798, -1, -0.9, -2)

[node name="OmniLight3D" type="OmniLight3D" parent="CameraRotationPoint/Camera3D"]
